# kparse

./: .gitignore  LICENSE  README.md  eran.py  gsheet.py  kparse.py  myfunc.py  pyproject.toml  requirements.txt
