[project]
name = "kparse"
version = "0.1.0"
description = ""
authors = [{ name = "Evan Fvm", email = "evan.fvm@gmail.com" }]
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["streamlit (>=1.42.0,<2.0.0)", "pandas (>=2.2.3,<3.0.0)", "numpy (>=2.2.3,<3.0.0)", "openpyxl (>=3.1.5,<4.0.0)", "watchdog (>=6.0.0,<7.0.0)"]

[tool.poetry]
package-mode = false

[tool.pyright]
venv = "."
venvPath = ".venv"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
